--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,12 +15,18 @@
     "@types/node": "^16.18.109",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
+    "i18next": "^23.15.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.2",
     "react-relay": "^18.0.0",
+    "react-relay-network-modern": "^6.2.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "relay-runtime": "^18.0.0",
     "typescript": "^4.9.5",
+    "universal-cookie": "^7.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -53,6 +59,8 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
+    "@types/react-relay": "^16.0.6",
+    "@types/relay-runtime": "^17.0.4",
     "babel-plugin-relay": "^18.0.0",
     "graphql": "^16.9.0",
     "relay-compiler": "^18.0.0"
